6935839: excessive marking stack growth during full gcs

Process one item at a time from the objarray stack/queue

Reviewed-by: apetrusenko, tonyp